...
              color={color}
            />
          ),
        }}
      />
      <Tab.Screen
        name="Requests"
        component={RequestsStack}
        options={{
          tabBarIcon: ({ color, focused }) => (
            <Icon
              name={focused ? 'clipboard-list' : 'clipboard-list-outline'}
              size={24}
...
              <TabBadge count={unacknowledgedCount} />
            </View>
          ),
        }}
      />
      <Tab.Screen
        name="My Staff"
        component={StaffStack}
        options={{
          tabBarIcon: ({ color, focused }) => (
            <Icon
              name={focused ? 'account-group' : 'account-group-outline'}
              size={24}
...
