...
        }}
      />
      <Tab.Screen
        name="GuardGatePass"
        component={GuardGatePassScreen}
        options={{
          tabBarLabel: 'Gate Pass',
          tabBarAccessibilityLabel: 'Gate Pass',
        }}
      />
    </Tab.Navigator>
  );
};
...
