...
        component={LaundryManagerProfileScreen}
        options={{ title: 'Profile' }}
      />
      <Stack.Screen
        name="CommBox"
        component={StaffCommBoxScreen}
        options={{ title: 'Notice Board' }}
      />
      <Stack.Screen
        name="NoticeDetail"
        component={NoticeDetailScreen}
        options={{ title: 'Notice' }}
      />
...
